Working on fixing virtual viewport on mobile

--- a/src/app/components/results-menu/results-menu.component.scss
+++ b/src/app/components/results-menu/results-menu.component.scss
@@ -174,6 +174,7 @@
 
 .tab-group-mobile {
   width: 100%;
+  height: 100%;
 }
 
 #result-div {
